--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
 	<head><title>Hola mundo git</title></head>
-	<body>Hola mundo git</body>
+	<body>Hola mundo git
+	-------------------------
+		Fin del mundo
+
+	</body>
 	</html>
